# eurocropsml-transfer-learning

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
eurocropsmeta/: placeholder.py
requirements/: requirements-ci.in  requirements-ci.txt  requirements-cpu.txt  requirements-gpu.txt  requirements-osx.txt
tests/: test_placeholder.py
